--- a/syrial-derive/Cargo.toml
+++ b/syrial-derive/Cargo.toml
@@ -15,4 +15,4 @@ proc-macro = true
 syn = { version = "2.0", features = ["derive", "parsing"] }
 quote = "1.0"
 proc-macro2 = "1.0"
-syrial = { path = "../syrial" }
+syrial = "0.1.0"
