--- a/syrial/Cargo.toml
+++ b/syrial/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "syrial"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 description = "A Rust library for streaming and serialization"
 license = "MIT"
 repository = "https://github.com/Mirokain/syrial"
 keywords = ["serialization", "stream", "rust"]
-categories = ["data-structures", "encoding"]
+categories = ["data-structures", "encoding", "serialize", "deserialize"]
 
 [dependencies]
 
